--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Sub harvest for postgres Aggie Crop Calculator",
   "main": "index.js",
   "dependencies": {
-    "node-pandas": "^1.0.5"
+    "node-pandas": "^1.0.5",
+    "pg": "^8.7.3",
+    "postgresql-client": "^2.0.0"
   },
   "devDependencies": {},
   "scripts": {
